parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> vacio
Rule 2     programa -> instrucciones
Rule 3     instrucciones -> INSTRUCCION estructura_for
Rule 4     instrucciones -> INSTRUCCION estructura_while
Rule 5     instrucciones -> INSTRUCCION estructura_if
Rule 6     instrucciones -> INSTRUCCION estructura_elif
Rule 7     instrucciones -> INSTRUCCION estructura_else
Rule 8     instrucciones -> INSTRUCCION estructura_def
Rule 9     instrucciones -> INSTRUCCION estructura_return
Rule 10    instrucciones -> INSTRUCCION estructura_print
Rule 11    instrucciones -> declaracion_variable
Rule 12    instrucciones -> vacio
Rule 13    estructura_for -> IDENTIFICADOR INSTRUCCION INSTRUCCION LPAREN parametros_for RPAREN DOS_PUNTOS
Rule 14    parametros_for -> argumento SEPARADOR argumento
Rule 15    parametros_for -> argumento
Rule 16    parametros_for -> argumento OPERADOR_ARITMETICO argumento SEPARADOR argumento OPERADOR_ARITMETICO argumento
Rule 17    parametros_for -> argumento SEPARADOR argumento OPERADOR_ARITMETICO argumento
Rule 18    parametros_for -> vacio
Rule 19    argumento -> IDENTIFICADOR
Rule 20    argumento -> NUMERO_ENTERO
Rule 21    estructura_while -> expr_condi DOS_PUNTOS
Rule 22    estructura_while -> expr_condi OPERADOR_LOGICO expr_condi DOS_PUNTOS
Rule 23    expr_condi -> LPAREN argumento OPERADOR_COMPARACION argumento RPAREN
Rule 24    expr_condi -> argumento OPERADOR_COMPARACION argumento
Rule 25    expr_condi -> LPAREN expr_arit OPERADOR_COMPARACION argumento RPAREN
Rule 26    estructura_if -> expr_condi DOS_PUNTOS
Rule 27    estructura_if -> expr_condi OPERADOR_LOGICO expr_condi DOS_PUNTOS
Rule 28    estructura_else -> DOS_PUNTOS
Rule 29    estructura_elif -> expr_condi DOS_PUNTOS
Rule 30    estructura_elif -> expr_condi OPERADOR_LOGICO expr_condi DOS_PUNTOS
Rule 31    estructura_def -> IDENTIFICADOR LPAREN parametros RPAREN DOS_PUNTOS
Rule 32    estructura_def -> IDENTIFICADOR LPAREN parametros RPAREN
Rule 33    parametros -> IDENTIFICADOR parametros
Rule 34    parametros -> SEPARADOR IDENTIFICADOR parametros
Rule 35    parametros -> vacio
Rule 36    estructura_return -> expr_arit
Rule 37    estructura_return -> expr_condi
Rule 38    estructura_return -> IDENTIFICADOR
Rule 39    estructura_return -> NUMERO_ENTERO
Rule 40    estructura_return -> BOOLEANO
Rule 41    estructura_return -> vacio
Rule 42    term -> IDENTIFICADOR
Rule 43    term -> NUMERO_ENTERO
Rule 44    term -> LPAREN expr_arit RPAREN
Rule 45    expr_arit -> term
Rule 46    expr_arit -> term OPERADOR_ARITMETICO term expr_arit
Rule 47    expr_arit -> OPERADOR_ARITMETICO term expr_arit
Rule 48    expr_arit -> vacio
Rule 49    estructura_print -> LPAREN CADENA RPAREN
Rule 50    estructura_print -> LPAREN IDENTIFICADOR RPAREN
Rule 51    estructura_print -> LPAREN RPAREN
Rule 52    declaracion_variable -> IDENTIFICADOR ASIGNACION IDENTIFICADOR
Rule 53    declaracion_variable -> IDENTIFICADOR ASIGNACION NUMERO_ENTERO
Rule 54    declaracion_variable -> IDENTIFICADOR ASIGNACION expr_arit
Rule 55    declaracion_variable -> IDENTIFICADOR ASIGNACION BOOLEANO
Rule 56    declaracion_variable -> IDENTIFICADOR ASIGNACION estructura_def
Rule 57    declaracion_variable -> IDENTIFICADOR ASIGNACION CADENA
Rule 58    declaracion_variable -> IDENTIFICADOR LPAREN parametros RPAREN
Rule 59    declaracion_variable -> IDENTIFICADOR ASIGNACION IDENTIFICADOR LPAREN parametros RPAREN
Rule 60    declaracion_variable -> IDENTIFICADOR
Rule 61    vacio -> <empty>

Terminals, with rules where they appear

ASIGNACION           : 52 53 54 55 56 57 59
BOOLEANO             : 40 55
CADENA               : 49 57
CHAR                 : 
DOS_PUNTOS           : 13 21 22 26 27 28 29 30 31
IDENTIFICADOR        : 13 19 31 32 33 34 38 42 50 52 52 53 54 55 56 57 58 59 59 60
INSTRUCCION          : 3 4 5 6 7 8 9 10 13 13
LPAREN               : 13 23 25 31 32 44 49 50 51 58 59
NUMERO_ENTERO        : 20 39 43 53
OPERADOR_ARITMETICO  : 16 16 17 46 47
OPERADOR_COMPARACION : 23 24 25
OPERADOR_LOGICO      : 22 27 30
RPAREN               : 13 23 25 31 32 44 49 50 51 58 59
SEPARADOR            : 14 16 17 34
error                : 

Nonterminals, with rules where they appear

argumento            : 14 14 15 16 16 16 16 17 17 17 23 23 24 24 25
declaracion_variable : 11
estructura_def       : 8 56
estructura_elif      : 6
estructura_else      : 7
estructura_for       : 3
estructura_if        : 5
estructura_print     : 10
estructura_return    : 9
estructura_while     : 4
expr_arit            : 25 36 44 46 47 54
expr_condi           : 21 22 22 26 27 27 29 30 30 37
instrucciones        : 2
parametros           : 31 32 33 34 58 59
parametros_for       : 13
programa             : 0
term                 : 45 46 46 47
vacio                : 1 12 18 35 41 48

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . vacio
    (2) programa -> . instrucciones
    (61) vacio -> .
    (3) instrucciones -> . INSTRUCCION estructura_for
    (4) instrucciones -> . INSTRUCCION estructura_while
    (5) instrucciones -> . INSTRUCCION estructura_if
    (6) instrucciones -> . INSTRUCCION estructura_elif
    (7) instrucciones -> . INSTRUCCION estructura_else
    (8) instrucciones -> . INSTRUCCION estructura_def
    (9) instrucciones -> . INSTRUCCION estructura_return
    (10) instrucciones -> . INSTRUCCION estructura_print
    (11) instrucciones -> . declaracion_variable
    (12) instrucciones -> . vacio
    (52) declaracion_variable -> . IDENTIFICADOR ASIGNACION IDENTIFICADOR
    (53) declaracion_variable -> . IDENTIFICADOR ASIGNACION NUMERO_ENTERO
    (54) declaracion_variable -> . IDENTIFICADOR ASIGNACION expr_arit
    (55) declaracion_variable -> . IDENTIFICADOR ASIGNACION BOOLEANO
    (56) declaracion_variable -> . IDENTIFICADOR ASIGNACION estructura_def
    (57) declaracion_variable -> . IDENTIFICADOR ASIGNACION CADENA
    (58) declaracion_variable -> . IDENTIFICADOR LPAREN parametros RPAREN
    (59) declaracion_variable -> . IDENTIFICADOR ASIGNACION IDENTIFICADOR LPAREN parametros RPAREN
    (60) declaracion_variable -> . IDENTIFICADOR

    $end            reduce using rule 61 (vacio -> .)
    INSTRUCCION     shift and go to state 4
    IDENTIFICADOR   shift and go to state 6

    programa                       shift and go to state 1
    vacio                          shift and go to state 2
    instrucciones                  shift and go to state 3
    declaracion_variable           shift and go to state 5

state 1

    (0) S' -> programa .



state 2

    (1) programa -> vacio .
    (12) instrucciones -> vacio .

  ! reduce/reduce conflict for $end resolved using rule 1 (programa -> vacio .)
    $end            reduce using rule 1 (programa -> vacio .)

  ! $end            [ reduce using rule 12 (instrucciones -> vacio .) ]


state 3

    (2) programa -> instrucciones .

    $end            reduce using rule 2 (programa -> instrucciones .)


state 4

    (3) instrucciones -> INSTRUCCION . estructura_for
    (4) instrucciones -> INSTRUCCION . estructura_while
    (5) instrucciones -> INSTRUCCION . estructura_if
    (6) instrucciones -> INSTRUCCION . estructura_elif
    (7) instrucciones -> INSTRUCCION . estructura_else
    (8) instrucciones -> INSTRUCCION . estructura_def
    (9) instrucciones -> INSTRUCCION . estructura_return
    (10) instrucciones -> INSTRUCCION . estructura_print
    (13) estructura_for -> . IDENTIFICADOR INSTRUCCION INSTRUCCION LPAREN parametros_for RPAREN DOS_PUNTOS
    (21) estructura_while -> . expr_condi DOS_PUNTOS
    (22) estructura_while -> . expr_condi OPERADOR_LOGICO expr_condi DOS_PUNTOS
    (26) estructura_if -> . expr_condi DOS_PUNTOS
    (27) estructura_if -> . expr_condi OPERADOR_LOGICO expr_condi DOS_PUNTOS
    (29) estructura_elif -> . expr_condi DOS_PUNTOS
    (30) estructura_elif -> . expr_condi OPERADOR_LOGICO expr_condi DOS_PUNTOS
    (28) estructura_else -> . DOS_PUNTOS
    (31) estructura_def -> . IDENTIFICADOR LPAREN parametros RPAREN DOS_PUNTOS
    (32) estructura_def -> . IDENTIFICADOR LPAREN parametros RPAREN
    (36) estructura_return -> . expr_arit
    (37) estructura_return -> . expr_condi
    (38) estructura_return -> . IDENTIFICADOR
    (39) estructura_return -> . NUMERO_ENTERO
    (40) estructura_return -> . BOOLEANO
    (41) estructura_return -> . vacio
    (49) estructura_print -> . LPAREN CADENA RPAREN
    (50) estructura_print -> . LPAREN IDENTIFICADOR RPAREN
    (51) estructura_print -> . LPAREN RPAREN
    (23) expr_condi -> . LPAREN argumento OPERADOR_COMPARACION argumento RPAREN
    (24) expr_condi -> . argumento OPERADOR_COMPARACION argumento
    (25) expr_condi -> . LPAREN expr_arit OPERADOR_COMPARACION argumento RPAREN
    (45) expr_arit -> . term
    (46) expr_arit -> . term OPERADOR_ARITMETICO term expr_arit
    (47) expr_arit -> . OPERADOR_ARITMETICO term expr_arit
    (48) expr_arit -> . vacio
    (61) vacio -> .
    (19) argumento -> . IDENTIFICADOR
    (20) argumento -> . NUMERO_ENTERO
    (42) term -> . IDENTIFICADOR
    (43) term -> . NUMERO_ENTERO
    (44) term -> . LPAREN expr_arit RPAREN

    IDENTIFICADOR   shift and go to state 15
    DOS_PUNTOS      shift and go to state 17
    NUMERO_ENTERO   shift and go to state 20
    BOOLEANO        shift and go to state 21
    LPAREN          shift and go to state 16
    OPERADOR_ARITMETICO shift and go to state 25
    $end            reduce using rule 61 (vacio -> .)

    estructura_for                 shift and go to state 7
    estructura_while               shift and go to state 8
    estructura_if                  shift and go to state 9
    estructura_elif                shift and go to state 10
    estructura_else                shift and go to state 11
    estructura_def                 shift and go to state 12
    estructura_return              shift and go to state 13
    estructura_print               shift and go to state 14
    expr_condi                     shift and go to state 18
    expr_arit                      shift and go to state 19
    vacio                          shift and go to state 22
    argumento                      shift and go to state 23
    term                           shift and go to state 24

state 5

    (11) instrucciones -> declaracion_variable .

    $end            reduce using rule 11 (instrucciones -> declaracion_variable .)


state 6

    (52) declaracion_variable -> IDENTIFICADOR . ASIGNACION IDENTIFICADOR
    (53) declaracion_variable -> IDENTIFICADOR . ASIGNACION NUMERO_ENTERO
    (54) declaracion_variable -> IDENTIFICADOR . ASIGNACION expr_arit
    (55) declaracion_variable -> IDENTIFICADOR . ASIGNACION BOOLEANO
    (56) declaracion_variable -> IDENTIFICADOR . ASIGNACION estructura_def
    (57) declaracion_variable -> IDENTIFICADOR . ASIGNACION CADENA
    (58) declaracion_variable -> IDENTIFICADOR . LPAREN parametros RPAREN
    (59) declaracion_variable -> IDENTIFICADOR . ASIGNACION IDENTIFICADOR LPAREN parametros RPAREN
    (60) declaracion_variable -> IDENTIFICADOR .

    ASIGNACION      shift and go to state 26
    LPAREN          shift and go to state 27
    $end            reduce using rule 60 (declaracion_variable -> IDENTIFICADOR .)


state 7

    (3) instrucciones -> INSTRUCCION estructura_for .

    $end            reduce using rule 3 (instrucciones -> INSTRUCCION estructura_for .)


state 8

    (4) instrucciones -> INSTRUCCION estructura_while .

    $end            reduce using rule 4 (instrucciones -> INSTRUCCION estructura_while .)


state 9

    (5) instrucciones -> INSTRUCCION estructura_if .

    $end            reduce using rule 5 (instrucciones -> INSTRUCCION estructura_if .)


state 10

    (6) instrucciones -> INSTRUCCION estructura_elif .

    $end            reduce using rule 6 (instrucciones -> INSTRUCCION estructura_elif .)


state 11

    (7) instrucciones -> INSTRUCCION estructura_else .

    $end            reduce using rule 7 (instrucciones -> INSTRUCCION estructura_else .)


state 12

    (8) instrucciones -> INSTRUCCION estructura_def .

    $end            reduce using rule 8 (instrucciones -> INSTRUCCION estructura_def .)


state 13

    (9) instrucciones -> INSTRUCCION estructura_return .

    $end            reduce using rule 9 (instrucciones -> INSTRUCCION estructura_return .)


state 14

    (10) instrucciones -> INSTRUCCION estructura_print .

    $end            reduce using rule 10 (instrucciones -> INSTRUCCION estructura_print .)


state 15

    (13) estructura_for -> IDENTIFICADOR . INSTRUCCION INSTRUCCION LPAREN parametros_for RPAREN DOS_PUNTOS
    (31) estructura_def -> IDENTIFICADOR . LPAREN parametros RPAREN DOS_PUNTOS
    (32) estructura_def -> IDENTIFICADOR . LPAREN parametros RPAREN
    (38) estructura_return -> IDENTIFICADOR .
    (19) argumento -> IDENTIFICADOR .
    (42) term -> IDENTIFICADOR .

  ! reduce/reduce conflict for $end resolved using rule 38 (estructura_return -> IDENTIFICADOR .)
    INSTRUCCION     shift and go to state 28
    LPAREN          shift and go to state 29
    $end            reduce using rule 38 (estructura_return -> IDENTIFICADOR .)
    OPERADOR_COMPARACION reduce using rule 19 (argumento -> IDENTIFICADOR .)
    OPERADOR_ARITMETICO reduce using rule 42 (term -> IDENTIFICADOR .)

  ! $end            [ reduce using rule 42 (term -> IDENTIFICADOR .) ]


state 16

    (49) estructura_print -> LPAREN . CADENA RPAREN
    (50) estructura_print -> LPAREN . IDENTIFICADOR RPAREN
    (51) estructura_print -> LPAREN . RPAREN
    (23) expr_condi -> LPAREN . argumento OPERADOR_COMPARACION argumento RPAREN
    (25) expr_condi -> LPAREN . expr_arit OPERADOR_COMPARACION argumento RPAREN
    (44) term -> LPAREN . expr_arit RPAREN
    (19) argumento -> . IDENTIFICADOR
    (20) argumento -> . NUMERO_ENTERO
    (45) expr_arit -> . term
    (46) expr_arit -> . term OPERADOR_ARITMETICO term expr_arit
    (47) expr_arit -> . OPERADOR_ARITMETICO term expr_arit
    (48) expr_arit -> . vacio
    (42) term -> . IDENTIFICADOR
    (43) term -> . NUMERO_ENTERO
    (44) term -> . LPAREN expr_arit RPAREN
    (61) vacio -> .

  ! shift/reduce conflict for RPAREN resolved as shift
    CADENA          shift and go to state 31
    IDENTIFICADOR   shift and go to state 33
    RPAREN          shift and go to state 32
    NUMERO_ENTERO   shift and go to state 36
    OPERADOR_ARITMETICO shift and go to state 25
    LPAREN          shift and go to state 30
    OPERADOR_COMPARACION reduce using rule 61 (vacio -> .)

  ! RPAREN          [ reduce using rule 61 (vacio -> .) ]

    argumento                      shift and go to state 34
    expr_arit                      shift and go to state 35
    term                           shift and go to state 24
    vacio                          shift and go to state 37

state 17

    (28) estructura_else -> DOS_PUNTOS .

    $end            reduce using rule 28 (estructura_else -> DOS_PUNTOS .)


state 18

    (21) estructura_while -> expr_condi . DOS_PUNTOS
    (22) estructura_while -> expr_condi . OPERADOR_LOGICO expr_condi DOS_PUNTOS
    (26) estructura_if -> expr_condi . DOS_PUNTOS
    (27) estructura_if -> expr_condi . OPERADOR_LOGICO expr_condi DOS_PUNTOS
    (29) estructura_elif -> expr_condi . DOS_PUNTOS
    (30) estructura_elif -> expr_condi . OPERADOR_LOGICO expr_condi DOS_PUNTOS
    (37) estructura_return -> expr_condi .

    DOS_PUNTOS      shift and go to state 38
    OPERADOR_LOGICO shift and go to state 39
    $end            reduce using rule 37 (estructura_return -> expr_condi .)


state 19

    (36) estructura_return -> expr_arit .

    $end            reduce using rule 36 (estructura_return -> expr_arit .)


state 20

    (39) estructura_return -> NUMERO_ENTERO .
    (20) argumento -> NUMERO_ENTERO .
    (43) term -> NUMERO_ENTERO .

  ! reduce/reduce conflict for $end resolved using rule 39 (estructura_return -> NUMERO_ENTERO .)
    $end            reduce using rule 39 (estructura_return -> NUMERO_ENTERO .)
    OPERADOR_COMPARACION reduce using rule 20 (argumento -> NUMERO_ENTERO .)
    OPERADOR_ARITMETICO reduce using rule 43 (term -> NUMERO_ENTERO .)

  ! $end            [ reduce using rule 43 (term -> NUMERO_ENTERO .) ]


state 21

    (40) estructura_return -> BOOLEANO .

    $end            reduce using rule 40 (estructura_return -> BOOLEANO .)


state 22

    (41) estructura_return -> vacio .
    (48) expr_arit -> vacio .

  ! reduce/reduce conflict for $end resolved using rule 41 (estructura_return -> vacio .)
    $end            reduce using rule 41 (estructura_return -> vacio .)

  ! $end            [ reduce using rule 48 (expr_arit -> vacio .) ]


state 23

    (24) expr_condi -> argumento . OPERADOR_COMPARACION argumento

    OPERADOR_COMPARACION shift and go to state 40


state 24

    (45) expr_arit -> term .
    (46) expr_arit -> term . OPERADOR_ARITMETICO term expr_arit

    $end            reduce using rule 45 (expr_arit -> term .)
    OPERADOR_COMPARACION reduce using rule 45 (expr_arit -> term .)
    RPAREN          reduce using rule 45 (expr_arit -> term .)
    OPERADOR_ARITMETICO shift and go to state 41


state 25

    (47) expr_arit -> OPERADOR_ARITMETICO . term expr_arit
    (42) term -> . IDENTIFICADOR
    (43) term -> . NUMERO_ENTERO
    (44) term -> . LPAREN expr_arit RPAREN

    IDENTIFICADOR   shift and go to state 43
    NUMERO_ENTERO   shift and go to state 44
    LPAREN          shift and go to state 30

    term                           shift and go to state 42

state 26

    (52) declaracion_variable -> IDENTIFICADOR ASIGNACION . IDENTIFICADOR
    (53) declaracion_variable -> IDENTIFICADOR ASIGNACION . NUMERO_ENTERO
    (54) declaracion_variable -> IDENTIFICADOR ASIGNACION . expr_arit
    (55) declaracion_variable -> IDENTIFICADOR ASIGNACION . BOOLEANO
    (56) declaracion_variable -> IDENTIFICADOR ASIGNACION . estructura_def
    (57) declaracion_variable -> IDENTIFICADOR ASIGNACION . CADENA
    (59) declaracion_variable -> IDENTIFICADOR ASIGNACION . IDENTIFICADOR LPAREN parametros RPAREN
    (45) expr_arit -> . term
    (46) expr_arit -> . term OPERADOR_ARITMETICO term expr_arit
    (47) expr_arit -> . OPERADOR_ARITMETICO term expr_arit
    (48) expr_arit -> . vacio
    (31) estructura_def -> . IDENTIFICADOR LPAREN parametros RPAREN DOS_PUNTOS
    (32) estructura_def -> . IDENTIFICADOR LPAREN parametros RPAREN
    (42) term -> . IDENTIFICADOR
    (43) term -> . NUMERO_ENTERO
    (44) term -> . LPAREN expr_arit RPAREN
    (61) vacio -> .

    IDENTIFICADOR   shift and go to state 45
    NUMERO_ENTERO   shift and go to state 46
    BOOLEANO        shift and go to state 48
    CADENA          shift and go to state 50
    OPERADOR_ARITMETICO shift and go to state 25
    LPAREN          shift and go to state 30
    $end            reduce using rule 61 (vacio -> .)

    expr_arit                      shift and go to state 47
    estructura_def                 shift and go to state 49
    term                           shift and go to state 24
    vacio                          shift and go to state 37

state 27

    (58) declaracion_variable -> IDENTIFICADOR LPAREN . parametros RPAREN
    (33) parametros -> . IDENTIFICADOR parametros
    (34) parametros -> . SEPARADOR IDENTIFICADOR parametros
    (35) parametros -> . vacio
    (61) vacio -> .

    IDENTIFICADOR   shift and go to state 51
    SEPARADOR       shift and go to state 53
    RPAREN          reduce using rule 61 (vacio -> .)

    parametros                     shift and go to state 52
    vacio                          shift and go to state 54

state 28

    (13) estructura_for -> IDENTIFICADOR INSTRUCCION . INSTRUCCION LPAREN parametros_for RPAREN DOS_PUNTOS

    INSTRUCCION     shift and go to state 55


state 29

    (31) estructura_def -> IDENTIFICADOR LPAREN . parametros RPAREN DOS_PUNTOS
    (32) estructura_def -> IDENTIFICADOR LPAREN . parametros RPAREN
    (33) parametros -> . IDENTIFICADOR parametros
    (34) parametros -> . SEPARADOR IDENTIFICADOR parametros
    (35) parametros -> . vacio
    (61) vacio -> .

    IDENTIFICADOR   shift and go to state 51
    SEPARADOR       shift and go to state 53
    RPAREN          reduce using rule 61 (vacio -> .)

    parametros                     shift and go to state 56
    vacio                          shift and go to state 54

state 30

    (44) term -> LPAREN . expr_arit RPAREN
    (45) expr_arit -> . term
    (46) expr_arit -> . term OPERADOR_ARITMETICO term expr_arit
    (47) expr_arit -> . OPERADOR_ARITMETICO term expr_arit
    (48) expr_arit -> . vacio
    (42) term -> . IDENTIFICADOR
    (43) term -> . NUMERO_ENTERO
    (44) term -> . LPAREN expr_arit RPAREN
    (61) vacio -> .

    OPERADOR_ARITMETICO shift and go to state 25
    IDENTIFICADOR   shift and go to state 43
    NUMERO_ENTERO   shift and go to state 44
    LPAREN          shift and go to state 30
    RPAREN          reduce using rule 61 (vacio -> .)

    expr_arit                      shift and go to state 57
    term                           shift and go to state 24
    vacio                          shift and go to state 37

state 31
